--- a/src/components/molecules/card/collection.module.scss
+++ b/src/components/molecules/card/collection.module.scss
@@ -1,13 +1,20 @@
 @import '../../../styles/common';
 
+$container-padding: 16px;
 .container {
 	display: flex;
 	flex-direction: column;
-	padding: 16px;
+	padding: $container-padding;
 	border-radius: 16px;
 	overflow: hidden;
-	color: $ts-white;
 	background-color: $ts-dark;
+	&,
+	&:hover {
+		color: $ts-white;
+	}
+	&:hover {
+		background-color: $ts-darkened-dark;
+	}
 }
 
 .imageContainer {
@@ -30,9 +37,17 @@
 	}
 }
 
+$like-icon-size: 32px;
+$like-icon-padding: 8px;
 .details {
 	display: flex;
 	align-items: center;
+	@media (any-pointer: fine) {
+		margin-right: #{$like-icon-size + $like-icon-padding};
+	}
+	&.detailsWithLike {
+		margin-right: #{$like-icon-size + $like-icon-padding};
+	}
 }
 
 .sequencesLabel,
@@ -57,15 +72,16 @@
 
 .like {
 	display: none;
-	margin-top: -6px;
+	position: absolute;
+	bottom: $container-padding;
+	right: $container-padding;
 	@media (any-pointer: fine) {
 		display: inherit;
+	}
+	@media (pointer: coarse) {
+		pointer-events: none;
 	}
 	&Active {
 		display: inherit;
 	}
-}
-
-.progress + .like {
-	margin-left: 16px;
 }
