--- a/src/components/molecules/card/index.module.scss
+++ b/src/components/molecules/card/index.module.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/common';
 
 .card {
+	position: relative;
 	display: flex;
 	border-radius: 16px;
 	box-shadow: $ts-shadow-small-default;
@@ -8,5 +9,8 @@
 	text-align: left;
 	> * {
 		flex-grow: 1;
+	}
+	*:hover {
+		text-decoration: none;
 	}
 }
