--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -40,6 +40,9 @@ $breakpoint-md: 664px;
 $breakpoint-lg: 894px;
 $breakpoint-xl: 1230px;
 
+$transition-quick: 150ms;
+$transition-medium: 300ms;
+
 $sidebar-width: 230px;
 $miniplayer-height: 90px;
 
