--- a/src/components/molecules/card/collection.module.scss
+++ b/src/components/molecules/card/collection.module.scss
@@ -8,6 +8,7 @@ $container-padding: 16px;
 	border-radius: 16px;
 	overflow: hidden;
 	background-color: $ts-dark;
+	transition: background-color $transition-medium;
 	&,
 	&:hover {
 		color: $ts-white;
