--- a/src/components/molecules/card/person.module.scss
+++ b/src/components/molecules/card/person.module.scss
@@ -7,6 +7,7 @@
 	border-radius: 16px;
 	overflow: hidden;
 	background-color: $ts-smartPlaylistH;
+	transition: background-color $transition-medium;
 	&,
 	&:hover {
 		color: $ts-dark;
