--- a/src/components/molecules/iconButton.module.scss
+++ b/src/components/molecules/iconButton.module.scss
@@ -7,6 +7,7 @@
 	height: 32px;
 	width: 32px;
 	border-radius: 16px;
+	transition: background-color $transition-medium;
 	&:hover {
 		cursor: pointer;
 	}
