--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -36,7 +36,7 @@
 		background-color: rgba(255, 255, 255, 0.7);
 		&.hidden {
 			opacity: 0;
-			transition: opacity 150ms;
+			transition: opacity $transition-quick;
 			&:hover {
 				opacity: 1;
 			}
