--- a/src/components/organisms/footer.module.scss
+++ b/src/components/organisms/footer.module.scss
@@ -1,8 +1,8 @@
 @import '../../styles/common';
 
 .footer {
-	background-color: $gray-dark;
-	color: $gray-bleached;
+	background-color: $ts-dark;
+	color: $ts-lightTone;
 	overflow: hidden;
 	margin-top: 2rem;
 	padding-bottom: 2rem;
