--- a/src/containers/testimonies.module.scss
+++ b/src/containers/testimonies.module.scss
@@ -13,9 +13,9 @@
 }
 
 .quotation {
-	color: $gray-mid;
+	color: $ts-dark;
 	padding: 1em;
-	background-color: $gray-bleached;
+	background-color: $ts-lightTone;
 	border-radius: 10px;
 	position: relative;
 	margin: 0;
@@ -26,7 +26,7 @@
 		bottom: -20px;
 		width: 0;
 		height: 0;
-		border-top: 10px solid $gray-bleached;
+		border-top: 10px solid $ts-lightTone;
 		border-right: 10px solid transparent;
 		border-left: 10px solid transparent;
 		border-bottom: 10px solid transparent;
@@ -43,5 +43,5 @@
 	margin-top: 1em;
 	margin-bottom: 2em;
 	font-style: italic;
-	color: $gray-light;
+	color: $ts-midTone;
 }
