Recording video player refinements

--- a/src/components/atoms/baseColors.module.scss
+++ b/src/components/atoms/baseColors.module.scss
@@ -28,6 +28,10 @@
 	color: $ts-midTone;
 }
 
+.borderColor-cream {
+	border-color: $ts-cream;
+}
+
 .borderColor-lightTone {
 	border-color: $ts-lightTone;
 }
