--- a/src/components/molecules/buttonSpeed.module.scss
+++ b/src/components/molecules/buttonSpeed.module.scss
@@ -1,5 +1,12 @@
 @import '../../styles/common';
 
+.base {
+	width: auto;
+	min-width: 32px;
+	padding-left: 6px;
+	padding-right: 6px;
+}
+
 .speed {
 	color: $ts-dark;
 	font-size: 20px;
