--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -107,6 +107,8 @@
 .speakers {
 	padding-left: 0;
 	margin-top: 0;
+	margin-bottom: 0;
+	padding-bottom: 0;
 	li {
 		display: block;
 		margin-right: 8px;
