--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -1,15 +1,35 @@
 @import '../../styles/common';
 
+.videoWrapper {
+	width: 100%;
+	aspect-ratio: 722/404;
+	background: $ts-dark;
+}
+
 .poster {
+	position: relative;
 	background: none;
 	border: none;
 	margin: 1rem 0 0 0;
 	padding: 0;
 	cursor: pointer;
 	display: block;
+	width: 100%;
+	height: 100%;
 	div {
 		display: block !important;
 	}
+}
+
+.posterPlay {
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	top: calc(50% - 28px);
+	left: 0;
+	right: 0;
+	text-align: center;
+	color: $ts-salmon;
 }
 
 .controls {
