--- a/src/components/molecules/copyrightInfo.module.scss
+++ b/src/components/molecules/copyrightInfo.module.scss
@@ -1,7 +1,7 @@
-.image {
-	// TODO: This feels like it entirely defeats the purpose of requiring
-	//   that image elements have both width and height attributes. Is there
-	//   any way we can know the real height ahead of time? Or do we need to
-	//   just give up on the rule?
-	height: auto;
+.text {
+	font-size: 11px;
+	line-height: 13.31px;
+	p {
+		margin: 0 !important;
+	}
 }
