--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -11,6 +11,7 @@ $ts-bookB: #5d4d4d;
 $ts-bookH: #483232;
 $ts-cream: #efebeb;
 $ts-dark: #323e48;
+$ts-black: #000000;
 $ts-lightTone: #cdd9e3;
 $ts-midTone: #6b7680;
 $ts-red: #ff224a;
