--- a/src/components/molecules/button.module.scss
+++ b/src/components/molecules/button.module.scss
@@ -42,7 +42,7 @@
 }
 .primary {
 	background: $ts-dark;
-	border: 1px solid $ts-dark;
+	border: 1px solid rgba($ts-dark, 0.5);
 	&,
 	&:hover {
 		color: $ts-white;
@@ -61,21 +61,24 @@
 	}
 }
 
-.secondary,
-.secondaryInverse {
-	border-width: 0.5px;
-	border-style: solid;
-}
 .secondary {
+	border: 1px solid rgba($ts-dark, 0.5);
 	&,
 	&:hover {
 		color: $ts-dark;
 	}
+	&:hover {
+		border-color: $ts-dark;
+	}
 }
 .secondaryInverse {
+	border: 1px solid rgba($ts-white, 0.5);
 	&,
 	&:hover {
 		color: $ts-white;
+	}
+	&:hover {
+		border-color: $ts-white;
 	}
 }
 
