--- a/src/components/molecules/input.module.scss
+++ b/src/components/molecules/input.module.scss
@@ -13,7 +13,7 @@
 	display: block;
 	margin-top: 4px;
 	padding: 8px;
-	border: 1px solid $ts-midTone;
+	border: 1px solid rgba($ts-midTone, 0.5);
 	border-radius: 4px;
 	font-size: 14px;
 	line-height: 16.8px;
