First pass at library views, filter styling; tweaks

--- a/src/components/molecules/buttonShareRecording.module.scss
+++ b/src/components/molecules/buttonShareRecording.module.scss
@@ -1,10 +1,7 @@
 @import '../../styles/common';
 
-.paper.paper {
+.container {
 	padding: 16px;
-	border: 1px solid $ts-red;
-	box-shadow: none;
-	color: $ts-dark;
 }
 
 .heading {
