--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -162,3 +162,30 @@
 .audiobookHeading {
 	font-weight: 400;
 }
+
+.attachment {
+	display: inline-flex;
+	align-items: center;
+	margin-right: 8px;
+	margin-bottom: 8px;
+	padding-left: 16px;
+	border: 1px solid $ts-lightTone;
+	border-radius: 16px;
+	&:hover {
+		border-color: $ts-midTone;
+		color: $ts-dark;
+		text-decoration: none;
+		.attachmentIcon {
+			color: $ts-white;
+			background-color: $ts-midTone;
+		}
+	}
+}
+.attachmentIcon {
+	margin-left: 16px;
+	display: inline-block;
+	padding: 12px;
+	background-color: $ts-lightTone;
+	border-top-right-radius: 16px;
+	border-bottom-right-radius: 16px;
+}
