--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -77,7 +77,7 @@
 	.navigation {
 		position: static;
 		flex: 0 0 $sidebar-width;
-		padding: 48px 32px;
+		padding: 32px;
 		overflow: scroll;
 		transform: translate(0px);
 		animation: none;
