--- a/src/components/molecules/tease.module.scss
+++ b/src/components/molecules/tease.module.scss
@@ -1,6 +1,13 @@
 @import '../../styles/common';
 
 .tease {
-	border-radius: 24px;
+	border-top-left-radius: 24px;
+	border-top-right-radius: 24px;
 	overflow: hidden;
+	@media (max-width: #{$breakpoint-md - 1px}) {
+		margin: 0 -24px -24px;
+	}
+	@media (min-width: $breakpoint-md) {
+		border-radius: 24px;
+	}
 }
