--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -158,6 +158,9 @@ a {
 	&.hover-bg--darkened-topicB {
 		background-color: $ts-darkened-topicB;
 	}
+	&.hover-bg--darkened-playlistH {
+		background-color: $ts-darkened-playlistH;
+	}
 	&.hover-bg--darkened-smartPlaylistH {
 		background-color: $ts-darkened-smartPlaylistH;
 	}
