--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -16,6 +16,8 @@ $ts-lightTone: #cdd9e3;
 $ts-midTone: #6b7680;
 $ts-red: #ff224a;
 $ts-salmon: #ff6e6e;
+$ts-playlistB: #e3f8ee;
+$ts-playlistH: #004530;
 $ts-smartPlaylistH: #f3f5fa;
 $ts-songB: #f2f9ff;
 $ts-songH: #d7ebfb;
@@ -34,6 +36,8 @@ $ts-darkened-bookH: #382525;
 $ts-darkened-cream: #e8e3e3;
 $ts-darkened-lightTone: #b5c4d1;
 $ts-darkened-dark: #232b32;
+$ts-darkened-playlistB: #d4f0e3;
+$ts-darkened-playlistH: #003928;
 $ts-darkened-smartPlaylistH: #e7e9ee;
 $ts-darkened-songB: #e3effa;
 $ts-darkened-songH: #c9def0;
