--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -7,6 +7,7 @@ $sans: 'Inter', 'system-ui', sans-serif;
 $ts-white: #ffffff;
 $ts-bibleB: #f1f2f4;
 $ts-bibleH: #000000;
+$ts-bibleVersionH: #313131;
 $ts-bookB: #5d4d4d;
 $ts-bookH: #483232;
 $ts-cream: #efebeb;
