--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -111,6 +111,9 @@
 	}
 }
 .seriesItems {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
 	@media (min-width: $breakpoint-md) {
 		display: flex;
 		flex-direction: row;
