--- a/src/components/organisms/paginatedCardList.module.scss
+++ b/src/components/organisms/paginatedCardList.module.scss
@@ -3,6 +3,9 @@
 	margin-bottom: 16px;
 }
 
-.heading {
+.headingRow {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 	margin-bottom: 25px;
 }
