--- a/src/components/molecules/teaseRecordingStack.module.scss
+++ b/src/components/molecules/teaseRecordingStack.module.scss
@@ -14,3 +14,9 @@
 	margin-left: 16px;
 	margin-right: 16px;
 }
+
+.contentOptionalLink {
+	@media (pointer: coarse) {
+		pointer-events: none;
+	}
+}
