--- a/src/containers/discover.module.scss
+++ b/src/containers/discover.module.scss
@@ -1,9 +1,6 @@
 @import '../styles/common';
 
-.grid {
-	// TODO: Fix tabbed focus access and indication in Safari; currently can't
-	//  tab into the grid
-	&:focus {
-		outline: none;
-	}
+.seeAllButton {
+	margin-top: 16px;
+	margin-bottom: 48px;
 }
