Unbookmarking confirm and query cache foo

--- a/src/containers/bible/book.module.scss
+++ b/src/containers/bible/book.module.scss
@@ -24,7 +24,7 @@
 	flex-direction: column;
 	background: $ts-bibleB;
 	> * {
-		padding: 16px 24px;
+		padding: $tease-padding;
 	}
 	p {
 		margin-top: 8px;
