--- a/src/containers/bible/version.module.scss
+++ b/src/containers/bible/version.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/common';
 
 .container {
-	padding: 16px 24px;
+	padding: $tease-padding;
 	background: $ts-bibleVersionH;
 }
 
