--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -1,17 +1,20 @@
 @import '../../styles/common';
 
 .header {
-	overflow: hidden;
+	display: flex;
 	flex-direction: column;
+	flex-grow: 1;
+	overflow: hidden;
 	h1 {
 		margin-top: 0;
 	}
 	ul {
+		margin: 0;
 		padding-left: 0;
 	}
 	li {
 		list-style-type: none;
-		margin-bottom: 26px;
+		margin-bottom: 24px;
 		color: $ts-midTone;
 		font-size: 18px;
 		font-weight: 400;
@@ -22,6 +25,11 @@
 			display: flex;
 			color: $ts-dark;
 		}
+		.iconDisclosure {
+			margin-left: 4px;
+			color: $ts-dark;
+			transform: rotate(-90deg);
+		}
 		.navLink {
 			flex-grow: 1;
 			text-decoration: none;
@@ -29,27 +37,131 @@
 			align-items: center;
 		}
 	}
-	.navLink:hover,
-	.navLink.active {
+	.navLink:hover {
 		&,
-		.icon {
+		.icon,
+		.iconDisclosure {
 			color: $ts-red;
+		}
+	}
+	@media (min-width: $breakpoint-lg) {
+		.navLink.active {
+			&,
+			.icon {
+				color: $ts-red;
+			}
 		}
 	}
 }
 
-.titleRow {
+.mobileHeader {
+	display: flex;
+	flex-direction: column;
+}
+.mobileRow {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin-bottom: 32px;
+	margin-bottom: 24px;
 }
-@media (min-width: $breakpoint-lg) {
-	.titleRow {
-		display: none;
+
+.downloadButton svg:first-of-type {
+	color: $ts-midTone;
+}
+
+.account {
+	flex-grow: 1;
+	display: flex;
+	align-items: flex-end;
+	margin-top: 16px;
+	margin-bottom: 4px; // ensure the underline is visible
+	color: $ts-midTone;
+}
+
+.submenu {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 144px;
+	bottom: 0;
+	margin: 0 24px 24px;
+	background: $ts-cream;
+	transform: translateX(110%);
+}
+
+.submenuShown {
+	animation: slide-in $transition-medium forwards;
+	-webkit-animation: slide-in $transition-medium forwards;
+}
+
+.submenuHidden {
+	animation: slide-out $transition-medium forwards;
+	-webkit-animation: slide-out $transition-medium forwards;
+}
+
+@keyframes slide-in {
+	100% {
+		transform: translateX(0%);
 	}
 }
 
-.donateButton {
-	margin-bottom: 16px;
+@keyframes slide-out {
+	0% {
+		transform: translateX(0%);
+	}
+	100% {
+		transform: translateX(110%);
+	}
+}
+
+.backToMenu {
+	display: flex;
+	align-items: center;
+	margin-bottom: 24px;
+	color: $ts-midTone;
+	> svg {
+		transform: rotate(90deg);
+		margin-right: 4px;
+	}
+	&:hover {
+		text-decoration: none;
+	}
+}
+
+.submenuItems {
+	li {
+		font-size: 17px;
+	}
+}
+
+.submenuHeading {
+	margin-bottom: 24px;
+}
+
+@media (min-width: $breakpoint-lg) {
+	.mobileHeader {
+		display: none;
+	}
+	.header {
+		position: relative;
+		> ul {
+			margin: 0 32px;
+		}
+	}
+	.submenu {
+		top: 0;
+		background: $ts-white;
+		transform: translateX($sidebar-width);
+	}
+	@keyframes slide-out {
+		0% {
+			transform: translateX(0%);
+		}
+		100% {
+			transform: translateX($sidebar-width);
+		}
+	}
+	.account {
+		margin: 16px 32px 34px;
+	}
 }
