Fix visual issue

--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -1,5 +1,10 @@
 @import '../../styles/common';
 
+.wrapper {
+	position: relative;
+	overflow: hidden;
+}
+
 .base {
 	display: flex;
 	align-items: stretch;
