--- a/src/components/molecules/button.module.scss
+++ b/src/components/molecules/button.module.scss
@@ -6,7 +6,7 @@
 	height: 31px;
 	padding: 3.5px 8px;
 	border-radius: 4px;
-
+	background: transparent;
 	font-size: 12px;
 	line-height: 14.52px;
 	cursor: pointer;
