extract guest button to component

--- a/src/containers/account/register.module.scss
+++ b/src/containers/account/register.module.scss
@@ -5,11 +5,10 @@
 }
 
 .actions {
-	margin: 0 auto;
+	margin: 32px auto 0 auto;
 	width: 200px;
 	display: flex;
 	flex-direction: column;
-	margin-top: 32px;
 	text-align: center;
 }
 
