--- a/src/components/templates/andOnboarding.module.scss
+++ b/src/components/templates/andOnboarding.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import '../../styles/common';
 
 .page {
@@ -49,17 +50,14 @@
 
 $onboarding-image-width: 3494px;
 .cards {
-	background: url('/img/onboarding.jpg');
-	background-size: #{$onboarding-image-width / 2} auto;
-	background-position: 67% top;
-	background-repeat: no-repeat;
+	background-size: #{math.div($onboarding-image-width, 2)} auto;
+	background: url('/img/onboarding.jpg') no-repeat 67% top;
 }
 
 .description {
 	width: 330px;
-	margin: 0 auto;
 	text-align: center;
-	margin-top: 32px;
+	margin: 32px auto 0;
 }
 
 .heading {
