Fixes and tweaks

--- a/src/components/molecules/teaseHeader.module.scss
+++ b/src/components/molecules/teaseHeader.module.scss
@@ -1,14 +1,15 @@
+@use 'sass:math';
 @import '../../styles/common';
 
 $header-minWidth: 571px;
 $header-maxWidth: 771px;
 .base {
 	@media (min-width: $breakpoint-md) {
-		width: calc(66.6667% - #{$grid-gap / 2});
+		width: calc(66.6667% - #{math.div($grid-gap, 2)});
 		min-width: $header-minWidth;
 	}
 	@media (min-width: $breakpoint-lg) {
-		width: calc(66.6667% - #{$grid-gap / 3});
+		width: calc(66.6667% - #{math.div($grid-gap, 3)});
 		max-width: $header-maxWidth;
 	}
 }
