--- a/src/components/molecules/circleButton.module.scss
+++ b/src/components/molecules/circleButton.module.scss
@@ -6,6 +6,7 @@
 	justify-content: center;
 	height: 32px;
 	width: 32px;
+	padding: 0;
 	border-radius: 16px;
 	border: none;
 	background: transparent;
