--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -127,6 +127,9 @@
 		animation: none;
 		background: $ts-white;
 	}
+	:global(.andMiniplayer--withPlayer) .navigation {
+		padding-bottom: $miniplayer-height;
+	}
 	.content {
 		flex: 0 0 100vw;
 		padding-left: $sidebar-width;
