--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -126,6 +126,7 @@
 		transform: translate(0);
 		animation: none;
 		background: $ts-white;
+		z-index: unset;
 	}
 	:global(.andMiniplayer--withPlayer) .navigation {
 		padding-bottom: $miniplayer-height;
