--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -18,13 +18,13 @@
 	position: relative;
 	background: none;
 	border: none;
-	margin: 1rem 0 0 0;
+	margin: 0;
 	padding: 0;
 	cursor: pointer;
 	display: block;
 	width: 100%;
 	height: 100%;
-	div {
+	> div {
 		display: block !important;
 	}
 }
@@ -38,6 +38,15 @@
 	right: 0;
 	text-align: center;
 	color: $ts-salmon;
+	opacity: 0;
+	transition: opacity $transition-medium;
+}
+
+.posterPlayShown,
+.poster:hover {
+	.posterPlay {
+		opacity: 1;
+	}
 }
 
 .controls {
@@ -119,4 +128,5 @@
 	--barColor: #{$ts-midTone};
 	--progressColor: #{$ts-salmon};
 	position: relative;
+	top: -14px;
 }
