--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
-	overflow: hidden;
+	overflow-y: scroll;
 	h1 {
 		margin-top: 0;
 	}
@@ -144,6 +144,7 @@
 	}
 	.header {
 		position: relative;
+		overflow: hidden;
 		> ul {
 			margin: 0 32px;
 		}
