--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -1,9 +1,8 @@
 @import '../../styles/common';
 
 .wrapper {
-	position: relative;
-	overflow: hidden;
 	background: $ts-white;
+	overflow: hidden;
 }
 
 .base {
@@ -13,11 +12,14 @@
 }
 
 .mobileHeader {
+	position: sticky;
+	top: 0;
 	display: flex;
 	flex-direction: column;
 	padding: 24px calc(24px + env(safe-area-inset-right)) 8px
 		calc(24px + env(safe-area-inset-left));
 	background: $ts-cream;
+	z-index: 1;
 }
 .mobileHeaderTitle {
 	display: flex;
