--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -74,24 +74,37 @@
 	display: flex;
 	align-items: flex-end;
 	margin-top: 16px;
-	margin-bottom: 4px; // ensure the underline is visible
 	color: $ts-midTone;
 }
 .accountWithAvatar {
+	flex-grow: 1;
 	display: flex;
 	align-items: center;
 	.iconDisclosure {
 		display: inline-block;
 		margin-left: 8px;
+		margin-bottom: 4px;
 		color: $ts-dark;
 		transform: rotate(-90deg);
+		flex: 0 0 18px;
 	}
-	&:hover .iconDisclosure {
-		color: $ts-red;
+	&:hover {
+		text-decoration: none;
+		.iconDisclosure {
+			color: $ts-red;
+		}
+		.accountName {
+			border-color: $ts-red;
+		}
 	}
 }
 .accountAvatar {
+	flex: 0 0 24px;
 	margin-right: 8px;
+}
+.accountName {
+	text-decoration: underline;
+	line-height: 1.3;
 }
 
 .submenu {
@@ -158,6 +171,6 @@
 		transform: translateX(0%);
 	}
 	.account {
-		margin: 16px 32px 34px;
+		margin: 16px 32px 32px;
 	}
 }
