--- a/src/components/templates/andOnboarding.module.scss
+++ b/src/components/templates/andOnboarding.module.scss
@@ -2,6 +2,13 @@
 @import '../../styles/common';
 
 .page {
+	background: $ts-white;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1000;
 	display: flex;
 	align-items: stretch;
 	flex-direction: column;
