--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -1,8 +1,12 @@
 @import '../../styles/common';
 
+.overflower {
+	position: relative;
+	overflow: hidden;
+}
+
 .wrapper {
 	background: $ts-white;
-	overflow: hidden;
 }
 
 .base {
