--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -87,12 +87,18 @@
 }
 
 .content {
-	flex: 1 1 100%;
+	flex: 0 1 100vw;
 	padding: 24px calc(24px + env(safe-area-inset-right)) 24px
 		calc(24px + env(safe-area-inset-left));
-	max-width: $content-maxWidth-sm;
+	max-width: 100vw;
 	margin: 0 auto;
+	@media (min-width: $content-maxWidth-sm) {
+		max-width: $content-maxWidth-sm;
+	}
 	@media (min-width: $breakpoint-md) {
+		max-width: 100vw;
+	}
+	@media (min-width: $content-maxWidth) {
 		max-width: $content-maxWidth;
 	}
 }
