--- a/src/components/molecules/card/collection.module.scss
+++ b/src/components/molecules/card/collection.module.scss
@@ -13,7 +13,7 @@ $container-padding: 16px;
 	&:hover {
 		color: $ts-white;
 	}
-	&:hover:not(.bookmarkHovered) {
+	&:hover:not(.otherHovered) {
 		background-color: $ts-darkened-dark;
 	}
 }
@@ -78,7 +78,7 @@ $container-padding: 16px;
 	}
 }
 
-.subSequences,
-.subSequence:nth-of-type(n + 2) {
+.subItems,
+.subItem:nth-of-type(n + 2) {
 	margin-top: 16px;
 }
