Design adjustments from Ivan

--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -167,7 +167,8 @@
 		overflow: hidden;
 	}
 	.slider {
-		margin: 0 32px;
+		margin-left: 32px;
+		margin-right: 22px;
 	}
 	.account {
 		margin-bottom: 32px;
