--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -26,6 +26,7 @@ $ts-storyB: #325763;
 $ts-storyH: #003849;
 $ts-topicB: #3e3d6d;
 $ts-topicH: #040253;
+$ts-bufferTone: #a5afb8;
 
 $ts-cccccc: #cccccc;
 
@@ -57,6 +58,8 @@ $breakpoint-xl: 1230px;
 
 $transition-quick: 150ms;
 $transition-medium: 300ms;
+
+$loading-animation-duration: 5s;
 
 $sidebar-width: 230px;
 $miniplayer-height: 90px;
