--- a/src/components/molecules/pagination.module.scss
+++ b/src/components/molecules/pagination.module.scss
@@ -11,10 +11,16 @@
 }
 
 .previousButton {
-	margin-right: 32px;
+	margin-right: 24px;
+	@media (min-width: $breakpoint-md) {
+		margin-right: 32px;
+	}
 }
 .nextButton {
-	margin-left: 32px;
+	margin-left: 24px;
+	@media (min-width: $breakpoint-md) {
+		margin-left: 32px;
+	}
 }
 
 .link {
@@ -57,5 +63,23 @@
 		a {
 			color: $ts-salmon;
 		}
+	}
+}
+
+@media (max-width: #{$breakpoint-md - 1px}) {
+	.previousButton,
+	.nextButton {
+		&:not(.mobileButton) {
+			display: none;
+		}
+	}
+	.link.optional {
+		display: none;
+	}
+}
+
+@media (min-width: $breakpoint-md) {
+	.mobileButton {
+		display: none;
 	}
 }
